third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/enum_variant_field.rs
#[derive(derive_more::FromStr)]
enum Enum {
    Unit,
    Tuple(i32),
}

fn main() {}
